# cannopy

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
conf/: eurlex.yaml  ner.yaml
conf/data/: miracl.yaml  msmarco.yaml  ner.yaml
conf/train/token/: ner.yaml
conf/train/token/ner/: gemma3-1b-pt.yaml  gemma3-270m.yaml  mbert.yaml  mm-bert.yaml  qwen3-1.7b.yaml  xlmr.yaml
src/app/: downloader.py  elastic.py  entrypoint.py  metrics.py  zip.py
src/app/args/: data.py  model.py
src/data/analyze/: ner.py
src/data/create/: esg.py  ml-kw-match.py
src/data/download/: eurlex.py  miracl.py  msmarco.py  ner.py
src/data/prepare/: ner.py
src/data/prepare/ner/: __init__.py  parser.py
src/data/split/: ner.py
src/train/token/: ner.py
