[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "caneuropy"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = ["torch", "transformers", "pyyaml", "syntok"]

[project.scripts]
data = "appcli.entrypoint:main"
train = "appcli.entrypoint:main"
eval = "appcli.entrypoint:main"
test = "appcli.entrypoint:main"
